Compilation OK for gstreamer usage in src/streamlibgstreamerdesktop.cc
Usage of cmake: rude
Gstreamer compilation on desktop

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,6 +6,17 @@ if (USE_DD_SYSLOG)
   add_definitions(-DUSE_DD_SYSLOG)
 endif()
 
-set(libvnn_SOURCES  vnnvideostream.h  inputconnectorstrategy.h inputconnectorcamera.h  inputconnectorcamera.cc )
+if (GSTREAMER_FOUND)
+ message(STATUS "Coucou gstereamer found")
+endif()
+
+set(libvnn_SOURCES  vnnvideostream.h
+                    inputconnectorstrategy.h
+		    inputconnectorcamera.h
+		    inputconnectorcamera.cc
+		    streamlib.h
+		    streamlibgstreamerdesktop.h
+		    streamlibgstreamerdesktop.cc
+		    )
 
 add_library(libvnn ${libvnn_SOURCES})
