examples: add my_example.cc
Shows:
  - usage of libvnn
  - executables compilation with cmake
compiles without errros, but do nothing yet

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,7 +10,7 @@ if (GSTREAMER_FOUND)
  message(STATUS "Coucou gstereamer found")
 endif()
 
-set(libvnn_SOURCES  vnnvideostream.h
+set(vnn_SOURCES  vnnvideostream.h
                     inputconnectorstrategy.h
 		    inputconnectorcamera.h
 		    inputconnectorcamera.cc
@@ -19,4 +19,4 @@ set(libvnn_SOURCES  vnnvideostream.h
 		    streamlibgstreamerdesktop.cc
 		    )
 
-add_library(libvnn ${libvnn_SOURCES})
+add_library(vnn ${vnn_SOURCES})
