my_example: first valid run

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -32,7 +32,7 @@ endif()
 if (USE_TSNE)
   set(TSNE_LIB_DEPS -ltsne_multicore)
 endif()
-set (CMAKE_CXX_FLAGS "-g -Wall -Wextra -std=c++11")
+set (CMAKE_CXX_FLAGS "-g -Wall -Wextra -std=c++11 -pthread -I/usr/include/gstreamer-1.0 -I/usr/include/glib-2.0 -I/usr/lib/x86_64-linux-gnu/glib-2.0/include -lgstapp-1.0 -lgstbase-1.0 -lgstreamer-1.0 -lgobject-2.0 -lglib-2.0  ")
 
 
 add_executable (my_example my_example.cc)
