--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,6 +19,7 @@ set(vnn_SOURCES  vnnvideostream.h
 		    streamlibgstreamerdesktop.cc
 		    outputconnectorstrategy.h
 		    outputconnectordummy.h
+		    outputconnectordummy.cc
 		    streamlibgstreamertx2.h
 		    streamlibgstreamertx2.cc
 		    )
