--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -32,5 +32,7 @@ set(vnn_SOURCES  vnnvideostream.h
 
 add_library(vnn ${vnn_SOURCES})
 
+target_link_libraries(vnn ${OpenCV_LIBS})
+
 install(TARGETS vnn DESTINATION lib)
 install(FILES streamlib.h DESTINATION include)
