--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,9 @@ include_directories(${GSTREAMER_INCLUDE_DIR})
 message(STATUS "Gstreamer include dir = ${GSTREAMER_INCLUDE_DIR} ")
 message(STATUS "Gstreamer library = ${GSTREAMER_LIBRARY} ")
 
+FIND_PACKAGE( Boost 1.62 COMPONENTS thread REQUIRED )
+INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )
+
 if (USE_TX2)
 	include_directories("/usr/lib/aarch64-linux-gnu/glib-2.0/include/")
 	include_directories("/usr/lib/aarch64-linux-gnu/gstreamer-1.0/include/")
